# Lead

./: .gitignore  CMakeLists.txt  README.md
assets/: ortho_shader.frag  ortho_shader.vert  shader.frag  shader.vert  texture sources.txt
cmake/: FindAntTweakBar.cmake  FindGLM.cmake  FindSDL2.cmake  FindSDL2_image.cmake  GetWin32ProgramFiles.cmake
include/: Building.h  Camera.h  Drawable.h  Drawable3D.h  Drawable3DContainer.cpp  Drawable3DContainer.h  FloorPlan.h  GLProgramUtils.h  Model.h  Scene.h  Shader.h  TestModelVerts.h  Utils.h  vikingVertsHeavy.txt
include/glad/: glad.h
src/: Building.cpp  CMakeLists.txt  Camera.cpp  Drawable3D.cpp  Drawable3DContainer.cpp  FloorPlan.cpp  GLProgramUtils.cpp  Model.cpp  Scene.cpp  Shader.cpp  TestModelVerts.cpp  Utils.cpp  glad.c  main.cpp
